--- a/smarkitalstrate/src/app/css/nav.module.css
+++ b/smarkitalstrate/src/app/css/nav.module.css
@@ -2,6 +2,11 @@
     display: none;
 } */
 
+.logo h2 {
+    font-size: 22px;
+    font-weight: 600;
+    color: #199BFF;
+}
 .nav{
         display: flex;
     width: 100%;
