--- a/smarkitalstrate/src/app/globals.css
+++ b/smarkitalstrate/src/app/globals.css
@@ -20,10 +20,18 @@
 }
 
 body {
+
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+   font-family: var(--font-poppins);
 }
+
+:root {
+  --font-poppins: 'Poppins', sans-serif;
+}
+
+
 
 
 
