--- a/smarkitalstrate/src/app/css/contact.module.css
+++ b/smarkitalstrate/src/app/css/contact.module.css
@@ -19,7 +19,7 @@
 
 }
 .contactBannerHeadingBlue{
-    color: #068FD3;
+    color: #0a99dd;
 }
 
 
@@ -35,7 +35,7 @@
 
 
 .getTouch {
-    background: #068FD3;
+    background: #0a99dd;
     color: white;
     text-align: center;
     padding: 6rem;
