--- a/smarkitalstrate/src/app/css/about.module.css
+++ b/smarkitalstrate/src/app/css/about.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     background: #F6FBFF;
     color: black;
-    padding: 8rem;
+    padding: 4rem 8rem;
 }
 
 
@@ -20,7 +20,7 @@
 
 }
 .aboutMainBannerHeadingBlue{
-    color: #068FD3;
+    color: #0a99dd;
 }
 
 
@@ -184,6 +184,25 @@
 }
 
 
+.leaderCard{
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0px 1px 3px #ccccccde ;
+    background: white;
+    color: black;
+    text-align: justify;
+    
+}
+
+.leaderCard h3{
+    font-size: 24px;
+    font-weight: 700;
+   }
+
+  
+
+
+
 
 @media only screen and (min-width:700px){
     .who{
@@ -206,7 +225,7 @@
     flex-direction: column;
     align-items: center;
     color: black;
-    padding: 4rem  7rem;
+    padding: 1rem  7rem;
     background: #F9FAFB;
 }
 
@@ -250,6 +269,18 @@
 
 .strengthBox{
     padding: 2rem 8rem;}
+
+    .leadershipCards{
+    padding: 1rem 7rem;
+    background: #f9fafb;
+    display: grid;
+    gap: 1rem;
+}
+  .leaderCard h5{
+    font-size: 18px;
+    font-weight: 700;
+   }
+
 
 
 }
@@ -346,5 +377,18 @@
     padding: 2rem;
 
 }
+
+.leadershipCards{
+    padding: 1rem;
+    background: #f9fafb;
+    display: grid;
+    gap: 1rem;
+}
+
+  .leaderCard h5{
+    font-size: 16px;
+    font-weight: 700;
+   }
+
 
 }
