--- a/smarkitalstrate/src/app/css/home.module.css
+++ b/smarkitalstrate/src/app/css/home.module.css
@@ -88,6 +88,7 @@
     font-weight: 700;
     color: black;
     line-height: 100%;
+    text-align: center;
 }
 .homeMainBannerHeadingBlue{
     color: #068FD3;
